# weather-crop-yield-warehouse

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/: .skill-lock.json
.claude/skills/coding-guidelines/: .skill-meta.json
.claude/skills/tlc-spec-driven/: .skill-meta.json
.githooks/: commit-msg
.specs/features/phase-1-iac/: spec.md  tasks.md
.specs/features/phase-2-ingestion/: spec.md  tasks.md
.specs/features/phase-3-transformation/: spec.md  tasks.md
.specs/features/phase-4-orchestration/: spec.md  tasks.md
.specs/features/phase-5-data-quality/: spec.md  tasks.md
airflow/: README.md  validate_dags.py
airflow/dags/: backfill.py  common.py  ingest_weather.py  ingest_yield.py  transform_dbt.py
airflow/dags/tests/: conftest.py  test_backfill.py  test_common.py  test_ingest_yield.py
dbt/: README.md  dbt_project.yml
dbt/macros/: bu_acre_to_t_ha.sql
dbt/models/marts/: _dim_commodity.yml  _dim_county.yml  _dim_date.yml  _fact_crop_yield.yml  _fact_weather_daily.yml  _weather_yield_analysis.yml  dim_commodity.sql  dim_county.sql  dim_date.sql  fact_crop_yield.sql  fact_weather_daily.sql  weather_yield_analysis.sql
dbt/models/staging/: _sources.yml  _stg_nass_yield.yml  _stg_weather_daily.yml  stg_nass_yield.sql  stg_weather_daily.sql
dbt/profiles/: profiles.yml
dbt/seeds/: _seeds.yml  county_centroids.csv
docs/: DATA_MODEL.md  DATA_SOURCES.md  IMPLEMENTATION_PLAN.md
infra/terraform/: README.md  backend.hcl  backend.tf  bigquery.tf  composer.tf  dev.tfvars.example  gcs.tf  iam.tf  outputs.tf  variables.tf  versions.tf
ingestion/: README.md  pyproject.toml
ingestion/src/wcy_ingestion/: __main__.py  config.py  seed.py
ingestion/src/wcy_ingestion/clients/: http.py  nass.py  openmeteo.py
ingestion/src/wcy_ingestion/io/: bigquery.py  gcs.py  secrets.py
ingestion/src/wcy_ingestion/pipelines/: nass_yield.py  weather.py  yield.py
ingestion/tests/: test_bigquery.py  test_gcs.py  test_http.py  test_nass.py  test_openmeteo.py
