[project]
name = "weather-crop-yield-warehouse"
version = "0.0.0"
description = "Batch pipeline and analytical warehouse correlating weather with US crop yields on GCP."
requires-python = ">=3.12"

# Root holds dev tooling only; it is not a packaged library (see [tool.uv]).
# Ingestion runtime deps live in ingestion/pyproject.toml (added in Phase 2).
[dependency-groups]
dev = [
    "ruff>=0.8",
    "sqlfluff>=3.2",
    "pre-commit>=4.0",
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ingestion/src", "ingestion/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["ingestion/tests"]
