[project]
name = "weather-crop-yield-warehouse"
version = "0.0.0"
description = "Batch pipeline and analytical warehouse correlating weather with US crop yields on GCP."
requires-python = ">=3.12"

# Root holds dev tooling only; it is not a packaged library (see [tool.uv]).
# Ingestion runtime deps live in ingestion/pyproject.toml (added in Phase 2).
[dependency-groups]
dev = [
    "ruff>=0.8",
    "sqlfluff>=3.2",
    "sqlfluff-templater-dbt>=3.2",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "respx>=0.22",
    "wcy-ingestion",
    "dbt-bigquery>=1.8.0,<2.0.0",
]
# Local DAG authoring / validation. Pinned to the Composer image's Airflow version
# (composer-3-airflow-3.1.7-build.11) so local parse results match Composer.
airflow = [
    "apache-airflow[standard]==3.1.7",
    "astronomer-cosmos>=1.8.0,<2.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
wcy-ingestion = { workspace = true }

[tool.uv.workspace]
members = ["ingestion"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ingestion/src", "ingestion/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["ingestion/tests"]
